--- a/hp_project/candidate_app/templates/home.html
+++ b/hp_project/candidate_app/templates/home.html
@@ -93,8 +93,8 @@
     <h1>Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
-      <a href="candidate_login/" class="btn btn-lg btn-secondary fw-bold border-black bg-black">CANDIDATE</a>
-      <a href="recruiter/" class="btn btn-lg btn-secondary fw-bold border-black bg-black">RECRUITER</a>
+      <a href="candidate_home/" class="btn btn-lg btn-secondary fw-bold border-black bg-black">CANDIDATE</a>
+      <a href="/recruiter_home/" class="btn btn-lg btn-secondary fw-bold border-black bg-black">RECRUITER</a>
     </p>
   </main>
 
