--- a/hp_project/UserLogin/templates/authentication/login.html
+++ b/hp_project/UserLogin/templates/authentication/login.html
@@ -88,12 +88,23 @@
     <h1 class="h3 mb-3 fw-normal">Please Login</h1>
 
     <div class="form-floating">
-        <label for="floatingInput">Username</label>
-        <input type="text" class="form-control" name="username" placeholder="name@example.com">
+        <input type="text" class="form-control" name="username" id="username"  placeholder="name@example.com">
+        <label for="floatingInput">username</label>
     </div>
     <div class="form-floating">
-        <label for="floatingPassword">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="Password">
+      <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+        <label for="floatingInput">password</label>
+    </div>
+
+      <script>
+            window.onload = function() {
+                document.getElementById("current_path").value = window.location.href
+            }
+        </script>
+
+    <div class="form-floating">
+      <input type="hidden" id="current_path" name = "current_path" readonly   >
+        <!-- <label for="floatingInput">User Type</label> -->
     </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
