--- a/hp_project/recruiter_app/templates/recruiter_page.html
+++ b/hp_project/recruiter_app/templates/recruiter_page.html
@@ -110,8 +110,8 @@
         {% endfor %}
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
         <p>
-          <a href="/upload/" class="btn btn-primary my-2">upload your CV</a>
-          <a href="#" class="btn btn-secondary my-2">Search for a job</a>
+          <a href="upload/" class="btn btn-primary my-2">upload your JD</a>
+          <!--<a href="#" class="btn btn-secondary my-2">Search for a job</a>--!>
         </p>
       </div>
     </div>
